# hart-protocol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-mypy.yml
hart-protocol/: CHANGELOG.md  README.md  pyproject.toml
hart-protocol/.github/workflows/: python-publish.yml  run-entry-points.yml
hart-protocol/hart_protocol/: __init__.py  _my_daemon.py  my-daemon.toml
hart_protocol/: VERSION.py  __init__.py  __version__.py  _parsing.py  _unpacker.py  common.py  tools.py  universal.py
